--- a/Hindernisstrecke.ipynb
+++ b/Hindernisstrecke.ipynb
@@ -17,6 +17,7 @@
     "class Hindernisstrecke {\n",
     "    \n",
     " private:\n",
+    "  SVG view;  \n",
     "  vector<*Rect> strecke;\n",
     "  Rect* block;\n",
     "\n",
@@ -25,7 +26,9 @@
     "\n",
     " public:\n",
     "  // konstruktor\n",
-    "  Hindernisstrecke() {}\n",
+    "  Hindernisstrecke(SVG view) {\n",
+    "      this -> view = view;\n",
+    "  }\n",
     "\n",
     "  // getter\n",
     "  void getV() { return v; }\n",
@@ -66,7 +69,8 @@
     "    }\n",
     "  }\n",
     "    \n",
-    "    void add(Rect r){\n",
+    "    void add(){\n",
+    "        block = new Rect(600, 400, 50, 100,&view);\n",
     "        strecke.push_back(r);\n",
     "    }\n",
     "    \n",
