--- a/main.ipynb
+++ b/main.ipynb
@@ -7,14 +7,12 @@
    "outputs": [],
    "source": [
     "#include <algoviz/SVG.hpp>\n",
-    "//#include \"Protagonist.hpp\"\n",
-    "//#include \"Hindernisstrecke.hpp\"\n",
     "#include \"Level.hpp\"\n",
-    "//#include \"Item.hpp\"\n",
+    "\n",
     "AlgoViz::clear();\n",
     "\n",
-    "SVG view = SVG(600, 500, \"Level 1\");\n",
-    "view.drawRect(0, 0, 600, 500);\n",
+    "SVG view = SVG(700, 500, \"Level 1\");\n",
+    "view.drawRect(0, 0, 700, 550);\n",
     "\n",
     "view.setStatusMsg(\"Drücken Sie x zu beenden!\");\n",
     "\n",
@@ -44,8 +42,10 @@
     "//levelMap.plaziereItems();\n",
     "\n",
     "int i = 0;\n",
+    "\n",
     "while (taste != \"x\") {\n",
     "    \n",
+    "    taste = \" \";\n",
     "    taste = view.lastKey();\n",
     "\n",
     "    //Wenn die Karte zu ende es, wird sie von vorne wiederbefüllt\n",
@@ -57,6 +57,8 @@
     "        }\n",
     "        \n",
     "        levelMap.fuellMap();\n",
+    "        int neuV = levelMap.getV() + 5;\n",
+    "        levelMap.setV(neuV);\n",
     "        i = 0;\n",
     "    }\n",
     "    \n",
@@ -64,10 +66,14 @@
     "    for(int j = 0; j < 3; j++){\n",
     "        \n",
     "        if (levelMap.ist1(i,j)) { \n",
+    "            \n",
     "            levelMap.add(j);\n",
     "            levelMap.move();\n",
+    "            \n",
     "        }else{\n",
     "            levelMap.move();\n",
+    "            AlgoViz::sleep(10);\n",
+    "\n",
     "        }\n",
     "    }\n",
     "    \n",
@@ -81,7 +87,6 @@
     "\n",
     "    AlgoViz::sleep(5);\n",
     "    i++;\n",
-    "    taste = \" \";\n",
     "}\n",
     "\n",
     "view.setStatusMsg(\"Ende!\");"
