--- a/main.ipynb
+++ b/main.ipynb
@@ -2,12 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "#include <algoviz/SVG.hpp>\n",
     "#include \"Level.hpp\"\n",
+    "#include \"Protagonist.hpp\"\n",
+    "#include \"Hindernis.hpp\"\n",
     "\n",
     "AlgoViz::clear();\n",
     "\n",
@@ -16,25 +18,37 @@
     "\n",
     "view.setStatusMsg(\"Drücken Sie x zu beenden!\");\n",
     "\n",
+    "Text anzeigeL = Text(\"Leben: 3\", 15, 20, &view);\n",
+    "Text anzeigeP = Text(\"Punkte: 0\", 15, 37, &view);\n",
+    "\n",
+    "\n",
     "MouseState maus;\n",
-    "string taste = \"\";\n",
     "\n",
     "//Spieler\n",
-    "//Protagonist spieler = Protagonist(&view);\n",
+    "Protagonist mario = Protagonist(&view);\n",
+    "\n",
+    "Hindernis hindernis = Hindernis();\n",
+    "\n",
     "\n",
     "//Karte des Levels\n",
     "Level levelMap = Level(10,10,view);\n",
     "\n",
-    "//iterator\n",
-    "bool anfang = true;\n",
-    "int sprungAnfang = 0;\n",
-    "int sprungDauer;\n",
-    "bool schonGesprungen = false;\n"
+    "int blockadedauer = 0;\n",
+    "bool blockade = false; // Einmal gedrückt, ist der Sprung vorerst nicht beeinflussbar...man kann aber \"Supersprung\" aktivieren\n",
+    "bool blockade2 = false; // Blockiert jegliche Aktionen während des Runterspringens\n",
+    "int arrowUp = 0; // Speichert die Anzahl der \"arrowUps\", die während der Blockade gedrückt werden...\n",
+    "bool supersprungB = false;\n",
+    "string taste = \"\";\n",
+    "int zaehler1 = 0;\n",
+    "int zaehler2 = 0;\n",
+    "\n",
+    "mario.setHindernis(&hindernis);\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,8 +58,6 @@
     "int i = 0;\n",
     "\n",
     "while (taste != \"x\") {\n",
-    "    \n",
-    "    taste = \" \";\n",
     "    taste = view.lastKey();\n",
     "\n",
     "    //Wenn die Karte zu ende es, wird sie von vorne wiederbefüllt\n",
@@ -79,14 +91,75 @@
     "    \n",
     "    levelMap.move();\n",
     "\n",
-    "    if (taste == \"ArrowUp\") {       \n",
+    "    if ( taste == \"ArrowUp\" && blockade == false ) {\n",
+    "        if ( mario.getBildwert() == 2 ) {\n",
+    "            mario.switchBildaktiv(\"ArrowUp\");\n",
+    "        } else if ( supersprungB == false && mario.getY() + 140 >= mario.getHindernisY() - 40 ) { \n",
+    "            mario.springenhoch();\n",
+    "            blockade = true; \n",
+    "        }\n",
+    "    } else if ( taste == \"ArrowUp\" && blockade == true ) {\n",
+    "        if ( mario.getY() + 140 >= mario.getHindernisY() - 40 && supersprungB == false && blockade2 == false ) {\n",
+    "            mario.springenhoch();\n",
+    "            arrowUp++;\n",
+    "            if ( mario.getY() + 140 < mario.getHindernisY() - 40 && arrowUp >= 4 ) { \n",
+    "                arrowUp = 0;\n",
+    "                supersprungB = true;\n",
+    "                mario.supersprung();\n",
+    "            } else if ( mario.getY() + 140 < mario.getHindernisY() - 40 && arrowUp < 4 ) {\n",
+    "                arrowUp = 0;\n",
+    "                blockade2 = true;\n",
+    "            } \n",
+    "        } else if ( mario.getY() + 280 >= mario.getHindernisY() - 40 && supersprungB == true && blockade2 == false ) {\n",
+    "            mario.springenhoch();\n",
+    "            if ( mario.getY() + 280 < mario.getHindernisY() - 40 ) {\n",
+    "                blockade2 = true;\n",
+    "            }\n",
+    "        } else if ( mario.getY() < mario.getHindernisY() - 40 && blockade2 == true ) {\n",
+    "            mario.springenrunter();\n",
+    "            if ( mario.getY() >= mario.getHindernisY() - 40 ) {\n",
+    "                blockade2 = false;\n",
+    "                blockade = false;\n",
+    "                supersprungB = false;\n",
+    "                mario.setSupersprung(false);\n",
+    "            }\n",
+    "        }\n",
+    "    } else if ( taste != \"ArrowUp\" && blockade == true ) {\n",
+    "        if ( mario.getY() + 140 >= mario.getHindernisY() - 40 && supersprungB == false && blockade2 == false ) {\n",
+    "            mario.springenhoch();\n",
+    "            if ( mario.getY() + 140 < mario.getHindernisY() - 40 && arrowUp >= 4 ) {\n",
+    "                arrowUp = 0;\n",
+    "                supersprungB = true;\n",
+    "                mario.supersprung();\n",
+    "            } else if ( mario.getY() + 140 < mario.getHindernisY() - 40 && arrowUp < 4 ) {\n",
+    "                arrowUp = 0;\n",
+    "                blockade2 = true;\n",
+    "            }\n",
+    "        } else if ( mario.getY() + 280 >= mario.getHindernisY() - 40 && supersprungB == true && blockade2 == false ) {\n",
+    "            mario.springenhoch();\n",
+    "            if ( mario.getY() + 280 < mario.getHindernisY() - 40 ) {\n",
+    "                blockade2 = true;\n",
+    "            }\n",
+    "        } else if ( mario.getY() < mario.getHindernisY() - 40 && blockade2 == true ) {\n",
+    "            mario.springenrunter();\n",
+    "            if ( mario.getY() >= mario.getHindernisY() - 40 ) {\n",
+    "                blockade2 = false;\n",
+    "                blockade = false;\n",
+    "                supersprungB = false;\n",
+    "                mario.setSupersprung(false);\n",
+    "            }\n",
+    "        }\n",
+    "    } else if ( taste == \"ArrowDown\" && mario.getY() >= mario.getHindernisY() - 40 ) {\n",
+    "        mario.switchBildaktiv(\"ArrowDown\");\n",
     "    }\n",
     "\n",
-    "    if (taste == \"ArrowDown\") {\n",
-    "    }\n",
     "\n",
     "    AlgoViz::sleep(5);\n",
     "    i++;\n",
+    "    if (i == 150) {\n",
+    "        mario.switchBildpassiv();\n",
+    "        zaehler1 = 0;\n",
+    "    }\n",
     "}\n",
     "\n",
     "view.setStatusMsg(\"Ende!\");"
