Neue Liste und konstruktor erweitet
FigurNah ist eine Liste, die die blöcke verwaltet die Nah an der figur sind.

der Konstruktor ruft jetzt selbstständigt die plaziere Funktionen an

--- a/main.ipynb
+++ b/main.ipynb
@@ -13,8 +13,11 @@
     "\n",
     "AlgoViz::clear();\n",
     "\n",
-    "SVG view = SVG(700, 500, \"Level 1\");\n",
-    "view.drawRect(0, 0, 700, 550);\n",
+    "SVG view = SVG(600, 500, \"Level 1\");\n",
+    "view.drawRect(0, 0, 600, 550);\n",
+    "\n",
+    "Rect figurBereich = Rect(150, 0, 70, 550, &view);\n",
+    "figurBereich.setFill(255,0,0);\n",
     "\n",
     "view.setStatusMsg(\"Drücken Sie x zu beenden!\");\n",
     "\n",
@@ -31,7 +34,7 @@
     "\n",
     "\n",
     "//Karte des Levels\n",
-    "Level levelMap = Level(10,10,view);\n",
+    "Level levelMap = Level(2.0,10,12,12,view);\n",
     "\n",
     "int blockadedauer = 0;\n",
     "bool blockade = false; // Einmal gedrückt, ist der Sprung vorerst nicht beeinflussbar...man kann aber \"Supersprung\" aktivieren\n",
@@ -50,7 +53,100 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "push: 1\n",
+      "push: 2\n",
+      "push: 3\n",
+      "push: 4\n",
+      "erase: 3\n",
+      "erase: 2\n",
+      "push: 3\n",
+      "erase: 2\n",
+      "push: 3\n",
+      "erase: 2\n",
+      "push: 3\n",
+      "push: 4\n",
+      "erase: 3\n",
+      "erase: 2\n",
+      "erase: 1\n",
+      "erase: 0\n",
+      "push: 1\n",
+      "push: 2\n",
+      "push: 3\n",
+      "push: 4\n",
+      "erase: 3\n",
+      "erase: 2\n",
+      "push: 3\n",
+      "push: 4\n",
+      "erase: 3\n",
+      "erase: 2\n",
+      "push: 3\n",
+      "push: 4\n",
+      "erase: 3\n",
+      "erase: 2\n",
+      "push: 3\n",
+      "erase: 2\n",
+      "push: 3\n",
+      "erase: 2\n",
+      "erase: 1\n",
+      "erase: 0\n",
+      "push: 1\n",
+      "push: 2\n",
+      "push: 3\n",
+      "erase: 2\n",
+      "push: 3\n",
+      "erase: 2\n",
+      "push: 3\n",
+      "push: 4\n",
+      "erase: 3\n",
+      "erase: 2\n",
+      "push: 3\n",
+      "push: 4\n",
+      "erase: 3\n",
+      "erase: 2\n",
+      "erase: 1\n",
+      "erase: 0\n",
+      "push: 1\n",
+      "push: 2\n",
+      "push: 3\n",
+      "erase: 2\n",
+      "push: 3\n",
+      "erase: 2\n",
+      "push: 3\n",
+      "push: 4\n",
+      "erase: 3\n",
+      "erase: 2\n",
+      "push: 3\n",
+      "push: 4\n",
+      "erase: 3\n",
+      "erase: 2\n",
+      "erase: 1\n",
+      "erase: 0\n",
+      "push: 1\n",
+      "push: 2\n",
+      "push: 3\n",
+      "push: 4\n",
+      "erase: 3\n",
+      "erase: 2\n",
+      "push: 3\n",
+      "push: 4\n",
+      "erase: 3\n",
+      "erase: 2\n",
+      "push: 3\n",
+      "push: 4\n",
+      "erase: 3\n",
+      "erase: 2\n",
+      "push: 3\n",
+      "push: 4\n",
+      "erase: 3\n",
+      "erase: 2\n"
+     ]
+    }
+   ],
    "source": [
     "levelMap.fuellMap();\n",
     "//levelMap.plaziereItems();\n",
@@ -58,6 +154,7 @@
     "int i = 0;\n",
     "\n",
     "while (taste != \"x\") {\n",
+    "    taste = view.lastKey();\n",
     "\n",
     "    //Wenn die Karte zu ende es, wird sie von vorne wiederbefüllt\n",
     "    if (i == 50) {\n",
@@ -68,7 +165,7 @@
     "        }\n",
     "        \n",
     "        levelMap.fuellMap();\n",
-    "        int neuV = levelMap.getV() + 5;\n",
+    "        int neuV = levelMap.getV() + 0.5;\n",
     "        levelMap.setV(neuV);\n",
     "        i = 0;\n",
     "    }\n",
@@ -76,20 +173,18 @@
     "    //für die drei Unterschiedliche Höhe\n",
     "    for(int j = 0; j < 3; j++){\n",
     "        \n",
-    "        if (levelMap.ist1(i,j)) { \n",
+    "        if (levelMap.getValue(i, j) == 1) { \n",
     "            \n",
     "            levelMap.add(j);\n",
     "            levelMap.move();\n",
     "            \n",
     "        }else{\n",
     "            levelMap.move();\n",
-    "            AlgoViz::sleep(10);\n",
     "\n",
     "        }\n",
     "    }\n",
     "    \n",
     "    levelMap.move();\n",
-    "\n",
     "    taste = view.lastKey();\n",
     "\n",
     "    if ( taste == \"ArrowUp\" && blockade == false ) {\n",
@@ -162,7 +257,9 @@
     "    }\n",
     "}\n",
     "\n",
-    "view.setStatusMsg(\"Ende!\");"
+    "view.setStatusMsg(\"Ende!\");\n",
+    "\n",
+    "   "
    ]
   }
  ],
