--- a/Projekt_main.ipynb
+++ b/Projekt_main.ipynb
@@ -3,117 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "#include <algoviz/SVG.hpp>\n",
-    "#include \"Item.hpp\"\n",
-    "#include \"Level.hpp\"\n",
-    "SVG feld = SVG(600,700,\"spielfeld\");\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "//neu***\n",
-    "list<Item*> items;\n",
-    "Item *item;\n",
-    "\n",
-    "int v;\n",
-    "int muenzeAnzahl;\n",
-    "int feindAnzahl;\n",
-    "int marioBlockAnzahl;\n",
-    "//\n",
-    "\n",
-    "Level levelMap = Level(v, muenzeAnzahl, feindAnzahl, marioBlockAnzahl, &feld);\n",
-    "levelMap.fuellMap();\n",
-    "\n",
-    "//Items platzieren***\n",
-    "levelMap.plaziereMuenze(muenzeAnzahl);\n",
-    "levelMap.plaziereFeind(feindAnzahl);\n",
-    "levelMap.plaziereMarioBlock(marioBlockAnzahl);\n",
-    "//\n",
-    "\n",
-    "int i = 0;\n",
-    "string taste = \"\";\n",
-    "\n",
-    "while (taste != \"x\") {\n",
-    "    taste = feld.lastKey();\n",
-    "    \n",
-    "    //Wenn die Karte zu ende es, wird sie von vorne wiederbefüllt\n",
-    "    if (i == 50) {\n",
-    "        \n",
-    "        for (int j = 0; j < 50; j++) {\n",
-    "            \n",
-    "            levelMap.move();\n",
-    "        }\n",
-    "        \n",
-    "        levelMap.fuellMap();\n",
-    "        int neuV = levelMap.getV() + 5;\n",
-    "        levelMap.setV(neuV);\n",
-    "        i = 0;\n",
-    "    }\n",
-    "    \n",
-    "    //für die drei Unterschiedliche Höhe\n",
-    "    for(int j = 0; j < 3; j++){\n",
-    "        \n",
-    "        if (levelMap.ist1(i,j)) {  \n",
-    "            levelMap.add(j);\n",
-    "            levelMap.move();\n",
-    "            \n",
-    "        //Items***\n",
-    "        //stein\n",
-    "        }else if (levelMap.iststein(i,j)) {\n",
-    "            \n",
-    "            int y = rand() % 500;\n",
-    "            item = new Item(700, y, 50, 50, 0, &feld);\n",
-    "            items.push_back(item);\n",
-    "        //muenze\n",
-    "        }else if (levelMap.istmuenze(i,j)) {\n",
-    "            \n",
-    "            int y = rand() % 500;\n",
-    "            item = new Item(700, y, 30, 30, 1, &feld);\n",
-    "            items.push_back(item);\n",
-    "        //feind\n",
-    "        }else if (levelMap.istfeind(i,j)) {\n",
-    "            \n",
-    "            item = new Item(700, 50, 60, 100, 2, &feld);\n",
-    "            items.push_back(item);\n",
-    "        }\n",
-    "\n",
-    "    }\n",
-    "        \n",
-    "    //geht durch die Liste und bewegt die Items\n",
-    "    auto it = items.begin();\n",
-    "    while (it != items.end()) {\n",
-    "\n",
-    "        Item *item = *it;\n",
-    "        item->moveTo(item->getXpos() - v, item->getYpos());\n",
-    "    }       \n",
-    "    //\n",
-    "        \n",
-    "        \n",
-    "    levelMap.move();\n",
-    "    \n",
-    "}"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
     "#include <algoviz/SVG.hpp>\n",
     "#include \"Level.hpp\"\n",
     "#include \"Protagonist.hpp\"\n",
-    "#include \"Hindernis.hpp\"\n",
+    "#include \"Item.hpp\"\n",
     "\n",
     "AlgoViz::clear();\n",
     "\n",
@@ -197,26 +93,24 @@
     "        if (levelMap.ist1(i,j)) { \n",
     "            \n",
     "            levelMap.add(j);\n",
-    "            //levelMap.move();\n",
-    "            \n",
-    "        //}else{\n",
-    "            //levelMap.move();\n",
     "\n",
-    "           // AlgoViz::sleep(10);\n",
-    "\n",
-    "         //Items-> boolfunktionen für Items fehlen in klasse level noch\n",
+    "        //Items-> boolfunktionen für Items fehlen in klasse level noch\n",
     "        //stein\n",
     "        }else if (levelMap.iststein(i,j)) {\n",
     "            \n",
-    "            int y = rand() % 500;\n",
+    "            // Y-Position der Items festlegen\n",
+    "            int y = 500 - 25 - j * rand() % 150;\n",
     "            item = new Item(700, y, 50, 50, 0, &feld);\n",
     "            items.push_back(item);\n",
+    "            \n",
     "        //muenze\n",
     "        }else if (levelMap.istmuenze(i,j)) {\n",
     "            \n",
-    "            int y = rand() % 500;\n",
+    "            // Y-Position der Items festlegen\n",
+    "            int y = 500 - 15 - j * rand() % 150;           \n",
     "            item = new Item(700, y, 30, 30, 1, &feld);\n",
     "            items.push_back(item);\n",
+    "            \n",
     "        //feind\n",
     "        }else if (levelMap.istfeind(i,j)) {\n",
     "            \n",
@@ -226,14 +120,8 @@
     "\n",
     "    }\n",
     "        \n",
-    "    //geht durch die Liste und bewegt die Items\n",
-    "    auto it = items.begin();\n",
-    "    while (it != items.end()) {\n",
-    "\n",
-    "        Item *item = *it;\n",
-    "        item->moveTo(item->getXpos() - v, item->getYpos());\n",
-    "    } \n",
-    "    //Hindernisse werden bewegt\n",
+    "    //Items und Hindernssisse werden bewegt\n",
+    "    item->moveItems(items,v);\n",
     "    levelMap.move();\n",
     "    \n",
     "\n",
@@ -310,6 +198,13 @@
     "\n",
     "view.setStatusMsg(\"Ende!\");"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
