Kollision Operation + main kriiert Objekte

--- a/main.ipynb
+++ b/main.ipynb
@@ -30,11 +30,11 @@
     "//Spieler\n",
     "Protagonist mario = Protagonist(&view);\n",
     "\n",
-    "Hindernis hindernis = Hindernis();\n",
+    "Hindernis hindernis = Hindernis(&view);\n",
     "\n",
     "\n",
     "//Karte des Levels\n",
-    "Level levelMap = Level(2.0,10,12,12,view);\n",
+    "Level levelMap = Level(2.0,10,12,12,&view);\n",
     "\n",
     "int blockadedauer = 0;\n",
     "bool blockade = false; // Einmal gedrückt, ist der Sprung vorerst nicht beeinflussbar...man kann aber \"Supersprung\" aktivieren\n",
@@ -63,86 +63,6 @@
       "push: 3\n",
       "push: 4\n",
       "erase: 3\n",
-      "erase: 2\n",
-      "push: 3\n",
-      "erase: 2\n",
-      "push: 3\n",
-      "erase: 2\n",
-      "push: 3\n",
-      "push: 4\n",
-      "erase: 3\n",
-      "erase: 2\n",
-      "erase: 1\n",
-      "erase: 0\n",
-      "push: 1\n",
-      "push: 2\n",
-      "push: 3\n",
-      "push: 4\n",
-      "erase: 3\n",
-      "erase: 2\n",
-      "push: 3\n",
-      "push: 4\n",
-      "erase: 3\n",
-      "erase: 2\n",
-      "push: 3\n",
-      "push: 4\n",
-      "erase: 3\n",
-      "erase: 2\n",
-      "push: 3\n",
-      "erase: 2\n",
-      "push: 3\n",
-      "erase: 2\n",
-      "erase: 1\n",
-      "erase: 0\n",
-      "push: 1\n",
-      "push: 2\n",
-      "push: 3\n",
-      "erase: 2\n",
-      "push: 3\n",
-      "erase: 2\n",
-      "push: 3\n",
-      "push: 4\n",
-      "erase: 3\n",
-      "erase: 2\n",
-      "push: 3\n",
-      "push: 4\n",
-      "erase: 3\n",
-      "erase: 2\n",
-      "erase: 1\n",
-      "erase: 0\n",
-      "push: 1\n",
-      "push: 2\n",
-      "push: 3\n",
-      "erase: 2\n",
-      "push: 3\n",
-      "erase: 2\n",
-      "push: 3\n",
-      "push: 4\n",
-      "erase: 3\n",
-      "erase: 2\n",
-      "push: 3\n",
-      "push: 4\n",
-      "erase: 3\n",
-      "erase: 2\n",
-      "erase: 1\n",
-      "erase: 0\n",
-      "push: 1\n",
-      "push: 2\n",
-      "push: 3\n",
-      "push: 4\n",
-      "erase: 3\n",
-      "erase: 2\n",
-      "push: 3\n",
-      "push: 4\n",
-      "erase: 3\n",
-      "erase: 2\n",
-      "push: 3\n",
-      "push: 4\n",
-      "erase: 3\n",
-      "erase: 2\n",
-      "push: 3\n",
-      "push: 4\n",
-      "erase: 3\n",
       "erase: 2\n"
      ]
     }
@@ -161,7 +81,7 @@
     "        \n",
     "        for (int j = 0; j < 50; j++) {\n",
     "            \n",
-    "            levelMap.move();\n",
+    "            hindernis.move();\n",
     "        }\n",
     "        \n",
     "        levelMap.fuellMap();\n",
@@ -173,18 +93,27 @@
     "    //für die drei Unterschiedliche Höhe\n",
     "    for(int j = 0; j < 3; j++){\n",
     "        \n",
-    "        if (levelMap.getValue(i, j) == 1) { \n",
+    "        switch (levelMap.getValue(i, j)) {\n",
+    "                \n",
+    "            case 0 :     \n",
     "            \n",
-    "            levelMap.add(j);\n",
-    "            levelMap.move();\n",
+    "            case 1 :levelMap.add(j);\n",
+    "                \n",
+    "            case 2 : int y = rand() % 500;\n",
+    "                     item = new Item(700, y, 30, 30, 1, &feld);\n",
+    "                     items.push_back(item);\n",
+    "                \n",
+    "            case 3: item = new Item(700, 50, 60, 100, 2, &feld);\n",
+    "                    items.push_back(item);\n",
     "            \n",
-    "        }else{\n",
-    "            levelMap.move();\n",
-    "\n",
-    "        }\n",
+    "            case 4 :int y = rand() % 500;\n",
+    "                    item = new Item(700, y, 50, 50, 0, &feld);\n",
+    "                    items.push_back(item);        \n",
+    "        }        \n",
     "    }\n",
     "    \n",
     "    levelMap.move();\n",
+    "    \n",
     "    taste = view.lastKey();\n",
     "\n",
     "    if ( taste == \"ArrowUp\" && blockade == false ) {\n",
