--- a/Main_zusammen4.ipynb
+++ b/Main_zusammen4.ipynb
@@ -1210,7 +1210,7 @@
     "Text levelUp = Text(\"!!Achtung!! Es wird schneller\", 290, 100, &view);\n",
     "levelUp.setColor(\"red\");\n",
     "levelUp.hide();\n",
-    "view.drawRect(110,380,80,80);\n",
+    "view.drawRect(110,400,80,80);\n",
     "\n",
     "//Spieler\n",
     "Protagonist mario = Protagonist(&view, &anzeigeP, &anzeigeL, 1);\n",
@@ -1331,7 +1331,7 @@
     "    //cout << yOben << endl;\n",
     "    mario.setYoben(yOben);\n",
     "\n",
-    "    if ( taste == \"ArrowUp\" && blockade2 == false && mario.getBildwert() != 3 ) {\n",
+    "    if ( taste == \"ArrowUp\" && blockade2 == false ) {\n",
     "        \n",
     "        if ( mario.getBildwert() == 2 ) {\n",
     "            mario.switchBildaktiv(\"ArrowUp\");\n",
@@ -1350,7 +1350,7 @@
     "                blockade2 = true;\n",
     "            }\n",
     "        }\n",
-    "    } else if ( taste == \"Shift\" && blockade2 == false && mario.getBildwert() != 3 ) {\n",
+    "    } else if ( taste == \"Shift\" && blockade2 == false ) {\n",
     "        if ( blockade == false ) {\n",
     "            yObenFix = yOben;\n",
     "            blockade = true;\n",
