--- a/main.ipynb
+++ b/main.ipynb
@@ -9,7 +9,6 @@
     "#include <algoviz/SVG.hpp>\n",
     "#include \"Level.hpp\"\n",
     "#include \"Protagonist.hpp\"\n",
-    "#include \"Hindernis.hpp\"\n",
     "#include \"Item.hpp\"\n",
     "#include \"Itemverwaltung.hpp\"\n",
     "\n",
@@ -117,55 +116,46 @@
      "output_type": "stream",
      "text": [
       "1 , 1 , 0\n",
-      "0 , 1 , 1\n",
       "3 , 1 , 0\n",
-      "1 , 0 , 0\n",
-      "0 , 1 , 0\n",
-      "3 , 0 , 0\n",
-      "1 , 0 , 1\n",
-      "2 , 0 , 1\n",
-      "1 , 1 , 0\n",
-      "0 , 0 , 0\n",
-      "0 , 2 , 1\n",
-      "0 , 0 , 1\n",
-      "1 , 1 , 0\n",
-      "2 , 2 , 0\n",
       "0 , 1 , 1\n",
       "0 , 1 , 0\n",
       "2 , 1 , 0\n",
-      "0 , 1 , 0\n",
       "1 , 0 , 1\n",
       "0 , 1 , 1\n",
-      "0 , 1 , 1\n",
-      "1 , 0 , 0\n",
-      "0 , 1 , 1\n",
-      "0 , 1 , 1\n",
-      "3 , 1 , 0\n",
-      "1 , 0 , 0\n",
+      "2 , 0 , 0\n",
       "1 , 0 , 1\n",
+      "1 , 0 , 1\n",
+      "1 , 1 , 0\n",
+      "0 , 1 , 1\n",
+      "0 , 1 , 1\n",
+      "3 , 0 , 0\n",
+      "3 , 0 , 0\n",
+      "0 , 1 , 0\n",
+      "3 , 2 , 0\n",
+      "1 , 1 , 0\n",
+      "1 , 2 , 1\n",
+      "2 , 2 , 1\n",
+      "0 , 1 , 1\n",
+      "0 , 2 , 0\n",
+      "1 , 1 , 0\n",
+      "2 , 1 , 0\n",
+      "1 , 1 , 0\n",
+      "1 , 0 , 0\n",
       "1 , 0 , 0\n",
       "0 , 1 , 1\n",
-      "0 , 1 , 0\n",
+      "2 , 2 , 0\n",
+      "1 , 0 , 0\n",
       "push: 1\n",
       "push: 2\n",
       "erase: 1\n",
       "erase: 0\n",
       "push: 1\n",
-      "push: 2\n",
-      "erase: 1\n",
       "erase: 0\n",
       "push: 1\n"
      ]
     }
    ],
    "source": [
-    "#include <algoviz/SVG.hpp>\n",
-    "#include \"Level3.hpp\"\n",
-    "#include \"Protagonist.hpp\"\n",
-    "#include \"Hindernis.hpp\"\n",
-    "#include \"Item.hpp\"\n",
-    "#include \"Itemverwaltung.hpp\"\n",
-    "\n",
     "using namespace std;\n",
     "\n",
     "AlgoViz::clear();\n",
@@ -204,8 +194,11 @@
     "Itemverwaltung bib = Itemverwaltung(&view);\n",
     "\n",
     "\n",
+    "int muenze = 10;\n",
+    "int feind = 5;\n",
+    "\n",
     "//Karte des Levels\n",
-    "Level levelMap = Level(1,5,5,&view);\n",
+    "Level levelMap = Level(1,muenze,feind,&view);\n",
     "\n",
     "bool blockade = false; // Einmal gedrückt, ist der Sprung vorerst nicht beeinflussbar...man kann aber \"Supersprung\" aktivieren\n",
     "bool blockade2 = false; // Blockiert jegliche Aktionen während des Runterspringens\n",
@@ -238,8 +231,13 @@
     "            cout << \"Level up!\" << endl;\n",
     "            \n",
     "            zaehler = 0;\n",
-    "            levelMap.fuellMap();\n",
+    "            \n",
+    "            muenze = muenze + 3;\n",
+    "            feind = feind + 3;\n",
+    "            levelMap.buildLevel(muenze, feind);\n",
+    "            \n",
     "            levelUp.show();\n",
+    "            \n",
     "            double neuV = levelMap.getV() + 0.25;\n",
     "            vZaehler = neuV;\n",
     "            levelMap.setV(neuV);\n",
@@ -469,7 +467,7 @@
     "    \n",
     "    \n",
     "    \n",
-    "    if(taste == \"Shift\" && coolDownBool == false ){\n",
+    "    if(taste == \" \" && coolDownBool == false ){\n",
     "        \n",
     "        coolDownBool = true;\n",
     "        \n",
