--- a/main.ipynb
+++ b/main.ipynb
@@ -9,8 +9,8 @@
     "#include <algoviz/SVG.hpp>\n",
     "#include \"Level.hpp\"\n",
     "#include \"Protagonist.hpp\"\n",
-    "#include \"Item.hpp\"\n",
-    "#include \"Itemverwaltung.hpp\"\n",
+    "#include \"Item1.hpp\"\n",
+    "#include \"Itemverwaltung1.hpp\"\n",
     "\n",
     "MouseState maus;\n",
     "\n",
@@ -116,42 +116,39 @@
      "output_type": "stream",
      "text": [
       "1 , 1 , 0\n",
+      "0 , 0 , 0\n",
+      "0 , 0 , 0\n",
+      "0 , 1 , 1\n",
+      "3 , 0 , 1\n",
       "3 , 1 , 0\n",
-      "0 , 1 , 1\n",
+      "3 , 1 , 0\n",
+      "3 , 2 , 1\n",
+      "1 , 2 , 0\n",
+      "2 , 0 , 1\n",
+      "1 , 1 , 0\n",
+      "1 , 1 , 0\n",
       "0 , 1 , 0\n",
-      "2 , 1 , 0\n",
-      "1 , 0 , 1\n",
-      "0 , 1 , 1\n",
-      "2 , 0 , 0\n",
-      "1 , 0 , 1\n",
-      "1 , 0 , 1\n",
+      "0 , 1 , 0\n",
+      "0 , 1 , 0\n",
       "1 , 1 , 0\n",
       "0 , 1 , 1\n",
       "0 , 1 , 1\n",
-      "3 , 0 , 0\n",
-      "3 , 0 , 0\n",
-      "0 , 1 , 0\n",
       "3 , 2 , 0\n",
-      "1 , 1 , 0\n",
-      "1 , 2 , 1\n",
-      "2 , 2 , 1\n",
-      "0 , 1 , 1\n",
-      "0 , 2 , 0\n",
-      "1 , 1 , 0\n",
-      "2 , 1 , 0\n",
-      "1 , 1 , 0\n",
-      "1 , 0 , 0\n",
-      "1 , 0 , 0\n",
-      "0 , 1 , 1\n",
       "2 , 2 , 0\n",
-      "1 , 0 , 0\n",
+      "1 , 1 , 0\n",
+      "0 , 1 , 1\n",
+      "0 , 1 , 1\n",
+      "2 , 1 , 0\n",
+      "0 , 1 , 1\n",
+      "1 , 2 , 0\n",
+      "0 , 1 , 1\n",
+      "0 , 1 , 1\n",
+      "0 , 1 , 1\n",
+      "1 , 2 , 0\n",
       "push: 1\n",
       "push: 2\n",
       "erase: 1\n",
-      "erase: 0\n",
-      "push: 1\n",
-      "erase: 0\n",
-      "push: 1\n"
+      "erase: 0\n"
      ]
     }
    ],
@@ -189,16 +186,16 @@
     "\n",
     "\n",
     "//Spieler\n",
-    "Protagonist mario = Protagonist(&view, &anzeigeP, &anzeigeL, 1);\n",
+    "Protagonist mario = Protagonist(&view, &anzeigeP, &anzeigeL, 5);\n",
     "\n",
-    "Itemverwaltung bib = Itemverwaltung(&view);\n",
+    "Itemverwaltung bib = Itemverwaltung(5,&view);\n",
     "\n",
     "\n",
     "int muenze = 10;\n",
     "int feind = 5;\n",
     "\n",
     "//Karte des Levels\n",
-    "Level levelMap = Level(1,muenze,feind,&view);\n",
+    "Level levelMap = Level(5,muenze,feind,&view);\n",
     "\n",
     "bool blockade = false; // Einmal gedrückt, ist der Sprung vorerst nicht beeinflussbar...man kann aber \"Supersprung\" aktivieren\n",
     "bool blockade2 = false; // Blockiert jegliche Aktionen während des Runterspringens\n",
@@ -218,8 +215,10 @@
     "\n",
     "\n",
     "\n",
-    "while ( mario.getLeben() > 0 ) {\n",
+    "while ( mario.getLeben() > 0 && taste != \"x\") {\n",
     "    \n",
+    "    bib.moveItems();\n",
+    "    //bib.kollision(mario);\n",
     "    \n",
     "    if ( zaehlerUnten2 >= 300 ) {\n",
     "        \n",
@@ -473,7 +472,8 @@
     "        \n",
     "    }\n",
     "    \n",
-    "    if(coolDownBool){\n",
+    "    if( taste == \" \" && coolDownBool){\n",
+    "        \n",
     "        if(coolDownTime != 0){\n",
     "            \n",
     "           coolDownTime--;\n",
