"coolDown"-Anzeige angepasst

--- a/main.ipynb
+++ b/main.ipynb
@@ -179,8 +179,8 @@
     "coolDown.setFill(\"LightBlue\");\n",
     "\n",
     "\n",
-    "int coolDownTime = 20;\n",
-    "bool coolDownBool = false;\n",
+    "//int coolDownTime = 20;\n",
+    "//bool coolDownBool = false;\n",
     "\n",
     "\n",
     "\n",
@@ -433,8 +433,10 @@
     "    \n",
     "    if ( mario.getBildwert() == 3 ) {\n",
     "        keinBildwechselZ++;\n",
+    "        coolDown.setWidth(coolDown.getWidth() - 1);\n",
     "        cout << keinBildwechselZ << endl;\n",
-    "        if ( keinBildwechselZ == 250 ) {\n",
+    "        if ( keinBildwechselZ == 200 ) {\n",
+    "            coolDown.setWidth(200);\n"
     "            keinBildwechselZ = 0;\n",
     "            mario.switchBildaktiv(\"OutOfFight\");\n",
     "        }\n",
@@ -466,28 +468,6 @@
     "    \n",
     "    \n",
     "    \n",
-    "    if(taste == \" \" && coolDownBool == false ){\n",
-    "        \n",
-    "        coolDownBool = true;\n",
-    "        \n",
-    "    }\n",
-    "    \n",
-    "    if( taste == \" \" && coolDownBool){\n",
-    "        \n",
-    "        if(coolDownTime != 0){\n",
-    "            \n",
-    "           coolDownTime--;\n",
-    "           int breite = coolDown.getWidth();\n",
-    "           coolDown.setWidth(breite - 10);\n",
-    "        \n",
-    "        }else{\n",
-    "            coolDownBool = false;\n",
-    "            coolDownTime = 20;\n",
-    "            coolDown.setWidth(200);\n",
-    "            \n",
-    "        }\n",
-    "        \n",
-    "    }\n",
     "    \n",
     "    // Münzkollision\n",
     "    //....\n",
