--- a/Main_zusammen6.ipynb
+++ b/Main_zusammen6.ipynb
@@ -3051,7 +3051,7 @@
     "coolDown.setFill(\"LightBlue\");\n",
     "\n",
     "\n",
-    "//int coolDownTime = 20;\n",
+    "int coolDownTime = 0;\n",
     "//bool coolDownBool = false;\n",
     "\n",
     "\n",
@@ -3245,7 +3245,7 @@
     "            \n",
     "    } else if ( taste != \"ArrowUp\" && taste != \"Shift\" && blockade == true ) {\n",
     "        \n",
-    "        if ( taste == \" \" ){\n",
+    "        if ( taste == \" \" && coolDownTime == 0 ){\n",
     "            if ( mario.getBildwert() != 3 ) {\n",
     "                mario.switchBildaktiv(\"fight\");\n",
     "            }\n",
@@ -3272,7 +3272,7 @@
     "    \n",
     "    } else if ( (blockade2 == true) || ( blockade == false && blockade2 == false && taste != \"ArrowDown\") ) {\n",
     "     \n",
-    "        if ( taste == \" \" ) {\n",
+    "        if ( taste == \" \" && coolDownTime == 0 ) {\n",
     "            if ( mario.getBildwert() != 3 ) {\n",
     "                mario.switchBildaktiv(\"fight\");\n",
     "            }\n",
@@ -3310,10 +3310,20 @@
     "        coolDown.setWidth(coolDown.getWidth() - 1);\n",
     "        \n",
     "        if ( keinBildwechselZ == 200 ) {\n",
-    "            coolDown.setWidth(200);\n",
+    "            //coolDown.setWidth(200);\n",
+    "            coolDownTime = 200;\n",
+    "            coolDown.setFill("red");\n",
     "            keinBildwechselZ = 0;\n",
     "            mario.switchBildaktiv(\"OutOfFight\");\n",
     "        }\n",
+    "    }\n",
+    "\n",
+    "    if ( coolDownTime > 0 ) {\n",
+    "         coolDownTime--;\n",
+    "         coolDown.setWidth(coolDown.getWidth + 1);\n",
+    "         if ( coolDownTime == 0 ) {\n",
+    "             coolDown.setFill("LightBlue");\n",
+    "         }\n",
     "    }\n",
     "\n",
     "\n",
