--- a/Untitled1 (1).ipynb
+++ b/Untitled1 (1).ipynb
@@ -314,7 +314,7 @@
     "                blockade2 = true;\n",
     "            }\n",
     "        }\n",
-    "    } else if ( taste == \"Shift\" && blockade2 == false ) {\n",
+    "    } else if ( taste == \"Shift\" && blockade2 == false && mario.getBildwert() != 2 ) {\n",
     "        \n",
     "        if ( blockade == false ) {\n",
     "            yObenFix = yOben;\n",
